<resources>
    <string name="app_name">UMDParkingApp</string>
    <string name="Settings">Settings</string>
    <string name="gameDayText">Gameday Parking</string>
    <string name="handicapText">Handicap Parking</string>
    <string name="serviceText">Service/Faculty Parking</string>
    <string name="back">Back</string>
    <string name="Save">Save</string>
    <string name="permit">Parking Permit:</string>

    <string-array name="parkingLots">
        <item>Lot 1</item>
        <item>Lot 2</item>
        <item>Lot 3</item>
        <item>Lot 4</item>
        <item>Lot 5</item>
    </string-array>
</resources>